<resources>
    <string name="app_name">SimSelection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="biometric_card">Use your fingerprint or your face to protect and authenticate access to your account. </string>
    <string name="login_card">Use a unique set of numbers to protect and authenticate access to your account.</string>
    <string name="account_card">If you deregister, your account on (appname) will be  permanently deleted. </string>
    <string name="deregister">Are you sure you want to deregister your account? </string>

    <string name="reversed_act">This action cannot be reversed</string>
    <string name="update_btn">Update/Change</string>
    <string name="deregister_btn">Deregister</string>
    <string name="confirm_deregister_btn">Confirm Deregistration</string>

    <string name="select_sim_btn">Select SIM</string>
    <string name="select_item_btn">Select Items</string>
    <string name="settings_btn">Settings</string>
    <string name="builder_btn">Builder Design Pattern</string>
    <string name="proceed_btn">Proceed to Next</string>
    <string name="sim_1">SIM 1</string>
    <string name="sim_2">SIM 2</string>
    <string name="sorting_btn">Sort Recycler View</string>
    <string name="sort_btn">Sort &amp; Filter</string>

    <string name="select_sim">Select Sim</string>
    <string name="select_atleast_one_option">Select atleast one option</string>
    <string name="select_city">Select City</string>
    <string name="cancel_btn">Cancel</string>
    <string name="city_name">City Name</string>
    <string name="account">Account</string>
    <string name="login_pin">Login PIN</string>
    <string name="biometric_login">Biometric Login</string>

    <string name="success">Successfully Logged In</string>
    <string name="description">Hey There..!! You have successfully Logged in…Please continue..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_name">FName</string>
    <string name="age">Age : </string>
    <string name="Amount">Amount : </string>
    <string name="Date">Date : </string>
    <string name="l_name">LName</string>
    <string name="sort_by_fname">Sort By First Name</string>
    <string name="sort_by_lname">Sort By Last Name</string>
    <string name="sort_by_age">Sort By Age</string>
    <string name="sort_by_salary_ascending">Sort By Salary Ascending</string>
    <string name="sort_by_salary_descending">Sort By Salary Descending</string>

    <!--bottom recyclerView Sheet -->

    <string name="sortby_newest_date">Sort by Date (Newest First)</string>
    <string name="sortby_oldest_date">Sort by Date (Oldest First)</string>
    <string name="sortby_highest_amount">Sort by Amount (Highest First)</string>
    <string name="sortby_lowest_amount">Sort by Amount (Lowest First)</string>




</resources>