<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--
    Sort by Date(Newest First)
    Sort by Date(Oldest First)
    Sort by Amount(Highest First)
    Sort by Amount(Lowest First)

    -->

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/sort_btn"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_text" />

    <TextView
        android:id="@+id/sort_by_new_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:text="@string/sortby_newest_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/sort_by_old_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:text="@string/sortby_oldest_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_new_date" />

    <TextView
        android:id="@+id/sort_by_high_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:text="@string/sortby_highest_amount"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_old_date" />

    <TextView
        android:id="@+id/sort_by_low_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:text="@string/sortby_lowest_amount"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        android:layout_marginBottom="@dimen/_20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_high_amount" />


</androidx.constraintlayout.widget.ConstraintLayout>