<?xml version="1.0" encoding="utf-8"?><!--<androidx.cardview.widget.CardView -->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    app:cardCornerRadius="30dp"-->
<!--    android:background="@color/black"-->
<!-- >-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RoundCornerDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_2dp"
        android:text="@string/deregister"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/rev_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center_horizontal"
        android:text="@string/reversed_act"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tv" />

    <Button
        android:id="@+id/deregister_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:backgroundTint="@color/button_color"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/_15dp"
        android:paddingBottom="@dimen/_15dp"
        android:text="@string/confirm_deregister_btn"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rev_tv" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_30dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/_6dp"
        android:text="@string/cancel_btn"
        android:textColor="@color/button_color"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deregister_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>