<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/theme_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:backgroundTint="@color/toolbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <TextView
            android:id="@+id/setting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/settings_btn"
            android:textColor="@color/black"
            android:textSize="@dimen/_26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/_8dp"
            app:cardElevation="@dimen/_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting_tv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/biometric_login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_sb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_weight="1"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_15dp"
                android:lineSpacingExtra="6sp"
                android:text="@string/biometric_card" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/_8dp"
            app:cardElevation="@dimen/_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/login_pin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/login_card" />

            <Button
                android:id="@+id/pin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_85dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:backgroundTint="@color/button_color"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="15dp"
                android:text="@string/update_btn"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="@dimen/_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_35dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_15dp"
                android:lineSpacingExtra="@dimen/_6dp"
                android:text="@string/account_card" />

            <Button
                android:id="@+id/account_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_85dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:backgroundTint="@color/button_color"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:text="@string/deregister_btn"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sp" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>