<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <Button
            android:id="@+id/btn_select_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_150dp"
            android:backgroundTint="@color/button_color"
            android:paddingStart="@dimen/_20dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingEnd="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/select_sim_btn"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_select_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:backgroundTint="@color/button_color"
            android:paddingStart="@dimen/_20dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingEnd="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/select_item_btn"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_select_sim" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:backgroundTint="@color/button_color"
            android:paddingStart="@dimen/_20dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingEnd="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/settings_btn"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_select_items" />

        <Button
            android:id="@+id/btn_builder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:backgroundTint="@color/button_color"
            android:paddingStart="@dimen/_20dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingEnd="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/builder_btn"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_settings" />

        <Button
            android:id="@+id/btn_sorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:backgroundTint="@color/button_color"
            android:paddingStart="@dimen/_20dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingEnd="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/sorting_btn"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_builder" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>