<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/city_cardv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginEnd="@dimen/_4dp"
        android:layout_marginBottom="@dimen/_4dp"
        android:elevation="@dimen/_1dp"
        app:cardCornerRadius="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/_6dp"
            android:paddingBottom="@dimen/_6dp">

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintLeft_toRightOf="@id/tv_first_name"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/agetexttview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginTop="@dimen/_10dp"
                android:hint="@string/age"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintLeft_toRightOf="@id/agetexttview"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

            <TextView
                android:id="@+id/salarytextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/Amount"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/agetexttview" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginTop="@dimen/_10dp"
                android:hint="@string/Amount"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintLeft_toRightOf="@id/salarytextview"
                app:layout_constraintTop_toBottomOf="@id/tv_age" />

            <TextView
                android:id="@+id/datetextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/Date"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/salarytextview" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginTop="@dimen/_10dp"
                android:hint="@string/Date"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintLeft_toRightOf="@id/salarytextview"
                app:layout_constraintTop_toBottomOf="@id/tv_amount" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>